--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="date"></h1>
+    <header id="header">
+      <h1 id="title">On this day Ye</h1>
+    </header>
+    <main id="main">
+      <h1 id="date"></h1>
+      <h2 id="quoteTitle"></h2>
+      <div id="quoteHolder">
+        <p id="quote"></p>
+        <div id="authorQuoteHolder"></div>
+      </div>
+    </main>
+
     <script src="database.js"></script>
     <script src="index.js"></script>
   </body>
